Step 2: Setup Baseline - Fix test failures with Java 25 compatibility
- Fixed test logic error in Aufgabe_2_1_GiroAccountTests where balance assertion was incorrect (should remain unchanged after failed send)
- Added @DirtiesContext annotations to tests that mutate database state (deleteAPI and addAccount tests) to ensure proper test isolation
- All 17 tests now pass with 100% success rate